# Wardly-AI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx  index.css
chat/: controller.py
chat/config/: prompts-template.py
chat/graph/: edges.py  graph.py  node.py  state.py
chat/utils/: llm.py  transcripts.py
helper/: chatStore.py  transcrips.py
report/: tejashsharma-1.json  tejashsharma-2.json  tejashsharma-3.json
reports/: reports.py  save_json.py
