[project]
name = "wardly-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.17.2",
    "annotated-types==0.7.0",
    "fastapi>=0.136.1",
    "greenlet==3.3.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-redis>=0.4.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.37",
    "psycopg-pool==3.3.0",
    "psycopg2-binary==2.9.11",
    "psycopg[binary]==3.3.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.45",
    "streamlit>=1.56.0",
    "uvicorn>=0.46.0",
]
